# AdvancedViews

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Ranges.pro  TableView.qml  main.py  tatus  ui.py  ui.qml
AdvancedViews/: AdvancedViews.pro  CMakeLists.txt  advancedviews_plugin.cpp  advancedviews_plugin.h  axis.cpp  axis.h  cell.h  qmldir  range.cpp  range.h  resources.qrc  stdutils.h  table.h  tableview.cpp  tableview.h  tableviewprivate.cpp  tableviewprivate.h
AdvancedViews/AdvancedViews/: TableView.qml
Doc/: advancedviews.qdoc  advancedviews.qdocconf
Example/: CMakeLists.txt  main.cpp  main.qml  testmodel.cpp  testmodel.h
Test/: CMakeLists.txt  Test.pro  tst_advancedviews.cpp
