set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
find_package(Qt5Quick)
set(TRG_NAME AdvancedViews)
file(GLOB TRG_SOURCES *.cpp)
file(GLOB TRG_HEADERS *.h)
file(GLOB TRG_RESOURCES *.qrc)
configure_file(qmldir ${CMAKE_CURRENT_BINARY_DIR})
add_library(${TRG_NAME} SHARED ${TRG_SOURCES} ${TRG_HEADERS} ${TRG_RESOURCES})
set_target_properties(${TRG_NAME} PROPERTIES CXX_STANDARD 17)
target_link_libraries(${TRG_NAME} Qt5::Quick)
