set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
find_package(Qt5Quick)
set(TRG_NAME Example)
set(TRG_SOURCES main.cpp)
set(TRG_RESOURCES qml.qrc)
add_executable(${TRG_NAME} ${TRG_SOURCES} ${TRG_RESOURCES})
set_target_properties(${TRG_NAME} PROPERTIES CXX_STANDARD 17)
target_link_libraries(${TRG_NAME} Qt5::Quick)
