set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
find_package(Qt5Quick)
find_package(Qt5Test)
set(TRG_NAME Test)
set(TRG_SOURCES tst_advancedviews.cpp)
include_directories(${CMAKE_SOURCE_DIR}/AdvancedViews)
add_executable(${TRG_NAME} ${TRG_SOURCES})
set_target_properties(${TRG_NAME} PROPERTIES CXX_STANDARD 17)
target_link_libraries(${TRG_NAME} Qt5::Quick Qt5::Test)
